[#157049139] Fix height for infinite scroll on mobile.

--- a/reactjs/components/atoms/Notifications/Popup/_styles.scss
+++ b/reactjs/components/atoms/Notifications/Popup/_styles.scss
@@ -101,6 +101,20 @@
       display: block;
     }
   }
+
+  // Fix for infinite scroll wrapper block.
+  .list > div > div > div {
+    width: 100%;
+  }
+  @include media-breakpoint-down(sm) {
+    // Fix auto height for infinite scroll on mobile.
+    .list > div > div {
+      display: flex;
+    }
+    .infinite-scroll-component {
+      height: 100% !important;
+    }
+  }
 }
 
 // Page background panel, that overlap all page element except popup.
